# effective_modern_cpp

./: CMakeLists.txt  code.cc  code.h  main.cc  tests.cc
